exturnal api added.
